@@ -9,6 +9,7 @@ Version 0.8
 
 (feature release, released on X)
 
+- Fix xattr issue when backing up sshfs filesystems (#4)
 - Support access of read only repositories.
 - New syntax to enable repository encryption:
     attic init --encryption="none|passphrase|keyfile".
